@@ -1,3 +1,6 @@
+2013-11-04  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/amcheck.c: Use full_write instead of write.
+
 2013-11-01  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/amcheck.c: Check return value of fdopen,
 	  fclose(dev_outf).
